# NLWeb_Core

./: .gitignore  Dockerfile  MANIFEST.in  VERSION_MANAGEMENT.md  config.yaml  install_all_editable.sh  nlw_spec.docx  pyproject.toml  requirements.txt  run_server.py  setup.py  startup.sh  test_llm_summary.py  test_startup.sh
docs/: NLWEB_V054_COMPLETE_SUMMARY.md  NLWeb Protocol Specification (v 0.54).md  http_example.md  index_html_v054_compatibility.md  mcp-lite.txt  mcp_example.md  nlweb_dropdown_widget_v054_update.md  nlweb_spec_implementation_design.md  restful_http_example.md  test_await_request.json  test_v054_minimal.json  test_v054_request.json  v054_implementation_summary.md
examples/azure_hello_world/: config.yaml  requirements.txt
nlweb-ui/: dropdown-widget-example.html  example.json  index.html  nlweb-chat.css  nlweb-chat.js  nlweb-dropdown-chat.css  nlweb-dropdown-chat.js  nlweb-sse-parser.js  nlweb-widget-loader.js
nlweb_core/: README.md  __init__.py  baseNLWeb.py  config.py  conversation_history.py  embedding.py  llm.py  ranking.py  retriever.py  simple_server.py
nlweb_core/config/: config_retrieval.yaml
nlweb_core/llm_providers/: anthropic.py  azure_deepseek.py  azure_llama.py  azure_oai.py  gemini.py  huggingface.py  inception.py  ollama.py  openai.py  snowflake.py
nlweb_core/query_analysis/: query_analysis.py
nlweb_core/utils/: message_senders.py  nlweb_client.py  utils.py
scripts/: setup_pypi.md  test_from_pypi.sh  test_from_testpypi.sh  test_packages.sh  upload_to_pypi.sh
